--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
+
+    <body>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/bakwan.html">Bakwan Recipe</a>
+        <a href="recipes/pejeh.html">Pejeh Recipe</a>
+        <a href="recipes/winko.html">Winko Recipe</a>
+    </body>
 </html>
