Add bakwan recipe content

--- a/recipes/bakwan.html
+++ b/recipes/bakwan.html
@@ -7,5 +7,34 @@
 
     <body>
         <h1>Bakwan recipe</h1>
+        <img src="bakwan.jpeg">
+        <h3>Bakwan Jagung</h3>
+        <p>Indonesian corn fritters are made from fresh corn, eggs, shallots, garlic, scallion, celery, all-purpose flour, rice flour, salt, ground white pepper, and ice cold water.</p>
+
+        <h5>Ingredients</h5>
+        <p2>
+            <ul>
+                <li>3 ears fresh corn (~ 2 1/4 cup of corn kernels)</li>
+                <li>25 gram shallots (~ 10 Indonesian sized, or ~ 3 US sized), minced</li>
+                <li>5 cloves garlic, minced</li>
+                <li>2 stalks scallion, thinly sliced, about 1/4 cup</li>
+                <li>3 eggs</li>
+                <li>150 gram all-purpose flour</li>
+                <li>75 gram rice flour or tapioca starch</li>
+                <li>1½ teaspoon salt</li>
+                <li>1 teaspoon ground pepper</li>
+                <li>300 ml ice-cold water</li>
+                <li>enough oil for deep frying</li>
+            </ul>
+        </p2>
+        <h5>Instructions</h5>
+        <p3>
+            <ol>
+                <li>Place a small ramekin inside a large mixing bowl. Stand each ear of corn on the small ramekin, and use a sharp knife to scrape off the kernels. The kernels will fall into the mixing bowl without making a mess. Throw away the cobs.</li>
+                <li>Add minced shallot, minced garlic, thinly sliced scallion, thinly sliced celery, and eggs into the mixing bowl. Add also all-purpose flour, rice flour, salt, ground white pepper, and ice-cold water. Mix gently with a spatula into a thick batter.</li>
+                <li>Heat two inches of oil in a pot to 170 Celcius (340 Fahrenheit) for deep frying.</li>
+                <li>Drop ladleful of batter into the hot oil and fry until golden brown, about 2-3 minutes each side. Drain the fritters on a wire rack over a baking sheet. Repeat until all batter is used up. Serve hot with tomato ketchup and chili sauce.</li>
+            </ol>
+        </p3>
     </body>
 </html>
