Add back link & list to index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/bakwan.html">Bakwan Recipe</a>
-        <a href="recipes/pejeh.html">Pejeh Recipe</a>
-        <a href="recipes/winko.html">Winko Recipe</a>
+        <ul>
+            <li><a href="recipes/bakwan.html">Bakwan Recipe</a></li>
+            <li><a href="recipes/pejeh.html">Pejeh Recipe</a></li>
+            <li><a href="recipes/winko.html">Winko Recipe</a></li>
+        </ul>
     </body>
 </html>
