--- a/recipes/bakwan.html
+++ b/recipes/bakwan.html
@@ -11,7 +11,7 @@
         <h3>Bakwan Jagung</h3>
         <p>Indonesian corn fritters are made from fresh corn, eggs, shallots, garlic, scallion, celery, all-purpose flour, rice flour, salt, ground white pepper, and ice cold water.</p>
 
-        <h5>Ingredients</h5>
+        <h4>Ingredients</h4>
         <p2>
             <ul>
                 <li>3 ears fresh corn (~ 2 1/4 cup of corn kernels)</li>
@@ -27,7 +27,7 @@
                 <li>enough oil for deep frying</li>
             </ul>
         </p2>
-        <h5>Instructions</h5>
+        <h4>Instructions</h4>
         <p3>
             <ol>
                 <li>Place a small ramekin inside a large mixing bowl. Stand each ear of corn on the small ramekin, and use a sharp knife to scrape off the kernels. The kernels will fall into the mixing bowl without making a mess. Throw away the cobs.</li>
@@ -36,5 +36,6 @@
                 <li>Drop ladleful of batter into the hot oil and fry until golden brown, about 2-3 minutes each side. Drain the fritters on a wire rack over a baking sheet. Repeat until all batter is used up. Serve hot with tomato ketchup and chili sauce.</li>
             </ol>
         </p3>
+        <a href="../index.html">Back to recipes</a>
     </body>
 </html>
