Add Pejeh content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/bakwan.html" target="_blank">Bakwan Recipe</a></li>
-            <li><a href="recipes/pejeh.html" target="_blank">Pejeh Recipe</a></li>
+            <li><a href="recipes/pejeh.html" target="_blank">Pejeh Recipe (NL) </a></li>
             <li><a href="recipes/winko.html" target="_blank">Winko Recipe</a></li>
         </ul>
     </body>
