--- a/recipes/pejeh.html
+++ b/recipes/pejeh.html
@@ -4,4 +4,39 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
+
+    <body>
+        <h1>Pejeh Recept</h1>
+        <img src="pejeh.jpeg">
+        <h3>Pejeh</h3>
+        <p>Javaanse Pejeh is een Javaanse gebakken krokante snack of Surinaamse chips met pinda en/of gedroogde garnalen. De Surinaamse-Javanen noemen deze heerlijke snack ook wel Rempejek.</p>
+
+        <h4>Ingredienten</h4>
+        <p2>
+            <ul>
+                <li>150 gram bloem</li>
+                <li>150 gram rijstmeel</li>
+                <li>2 eetlepels maïzena</li>
+                <li>1 ei</li>
+                <li>1 teentje knoflook</li>
+                <li>zout naar smaak</li>
+                <li>50ml kokosmelk</li>
+                <li>100 gram pinda's</li>
+                <li>100 gram kleine gedroogde garnalen</li>
+                <li>olie</li>
+                <li>water</li>
+            </ul>
+        </p2>
+        <h4>Instructions</h4>
+        <p3>
+            <ol>
+                <li>Meng de fijngemalen knoflook, bloem, rijstmeel, maizena en zout.</li>
+                <li>Voeg een losgeklopt ei erbij</li>
+                <li>Voeg kokosmelk en voldoende water toe en mengen totdat een slap (pannenkoek) deeg ontstaat.</li>
+                <li>Breek de pinda in groffe stukken met een vijzel of blender. De pindas en eventueel de garnaaltjes bij doen.</li>
+                <li>Bakken in een grote wok of wadjan pan in hete olie, want bij het bakken moet je het beslag niet direct in de hete olie gieten, maar langzaam aan de langszij van de wadjan/wok boven de oliehoogte verspreiden en dan bakken. Zo bak je de Javaanse Peje verder gaar in de olie.</li>
+            </ol>
+        </p3>
+        <a href="../index.html">Back to recipes</a>
+    </body>
 </html>
