Add wingko content

--- a/recipes/winko.html
+++ b/recipes/winko.html
@@ -2,6 +2,40 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Wingko Babat</title>
     </head>
+
+    <body>
+        <h1>Wingko recipe</h1>
+        <img src="winko.jpeg">
+        <h3>Wingko babat</h3>
+        <p>Indonesian wingko babat is made for coconut lovers. With freshly grated coconut, coconut milk, and coconut oil, it's impossible not to love these yummy cakes.</p>
+
+        <h4>Ingredients</h4>
+        <p2>
+            <ul>
+                <li>300 gram freshly shredded coconut meat</li>
+                <li>150 gram glutinous (sticky) rice flour</li>
+                <li>200 gram sugar</li>
+                <li>1/4 teaspoon salt</li>
+                <li>1 egg</li>
+                <li>150 gram coconut milk</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>coconut oil (or butter/oil) to grease the cake pan</li>
+                <li>2 tablespoon toasted sesame seeds</li>
+            </ul>
+        </p2>
+        <h4>Instructions</h4>
+        <p3>
+            <ol>
+                <li>Preheat oven to 180 Celsius (350 Fahrenheit). Line an 8"x8" square cake pan with parchment paper, grease with coconut oil (or butter/oil) and set aside.</li>
+                <li>Mix together freshly shredded coconut meat, glutinous rice flour, sugar, and salt. Add egg and mix well. Add coconut milk and vanilla extract, mix well.</li>
+                <li>Pour the batter into prepared pan, sprinkle the top of the batter with toasted sesame seeds.</li>
+                <li>Bake in preheated oven for about 50 minutes, or until a cake tester comes out clean.</li>
+                <li>If the top of the cake doesn't have an even golden brown color, turn on the oven broiler, watch like a hawk, and remove the cake once the top has a nice even golden brown color.</li>
+                <li>Cool the cake in the pan until room temperature. Remove the cake from pan, and cut into 20-24 pieces.</li>
+            </ol>
+        </p3>
+        <a href="../index.html">Back to recipes</a>
+    </body>
 </html>
