--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="recipes/bakwan.html" target="_blank">Bakwan Recipe</a></li>
             <li><a href="recipes/pejeh.html" target="_blank">Pejeh Recipe (NL) </a></li>
-            <li><a href="recipes/winko.html" target="_blank">Winko Recipe</a></li>
+            <li><a href="recipes/winko.html" target="_blank">Wingko Recipe</a></li>
         </ul>
     </body>
 </html>
