--- a/recipes/pejeh.html
+++ b/recipes/pejeh.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Pejeh</title>
     </head>
 
     <body>
