--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/bakwan.html" target="_blank">Bakwan Recipe</a></li>
-            <li><a href="recipes/pejeh.html" target="_blank">Pejeh Recipe (NL) </a></li>
-            <li><a href="recipes/winko.html" target="_blank">Wingko Recipe</a></li>
+            <li><a href="recipes/bakwan.html">Bakwan Recipe</a></li>
+            <li><a href="recipes/pejeh.html">Pejeh Recipe (NL) </a></li>
+            <li><a href="recipes/winko.html">Wingko Recipe</a></li>
         </ul>
     </body>
 </html>
